css fix for if a gallery had a single item the arrow block replacements would cause it to be misaligned

--- a/testdata/template/public/css/css.css
+++ b/testdata/template/public/css/css.css
@@ -111,9 +111,17 @@ main .galleryItemImageContainer .imgNav{
 	margin: auto 6vw auto 6vw;
 }
 
-main .galleryItemImageContainer .imgNavNo{
+main .galleryItemImageContainer .imgNavArrowNo{
+	/*this is repeated too much will fix later*/
+	background-color: transparent;
+	width:0;
+	height: 0;
+	margin-left:4.5vw;
+	margin-right:4.5vw;
+	border-style: solid;
 	
-	background-color:transparent;
+	border-width: 2.5em 3vw 2.5em  0;
+	border-color: transparent; 
 	
 }
 
